@@ -44,6 +44,65 @@
             <artifactId>javafx-base</artifactId>
             <version>${javafx.version}</version>
         </dependency>
+
+        <!-- Local JARs -->
+        <dependency>
+            <groupId>com.google.oauth-client</groupId>
+            <artifactId>google-oauth-client</artifactId>
+            <version>1.34.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/google-oauth-client-1.34.1.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.google.oauth-client</groupId>
+            <artifactId>google-oauth-client-jetty</artifactId>
+            <version>1.34.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/google-oauth-client-jetty-1.34.1.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>2.2.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/google-api-client-2.2.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client</artifactId>
+            <version>1.43.3</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/google-http-client-1.43.3.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client-jackson2</artifactId>
+            <version>1.43.3</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/google-http-client-jackson2-1.43.3.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.google.auth</groupId>
+            <artifactId>google-auth-library-oauth2-http</artifactId>
+            <version>1.19.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/google-auth-library-oauth2-http-1.19.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.angus</groupId>
+            <artifactId>angus-mail</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
+            <version>2.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
+            <version>2.1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -84,6 +143,8 @@
                     <options>
                         <option>--add-modules</option>
                         <option>java.sql,javafx.controls,javafx.fxml,javafx.graphics</option>
+                        <option>--add-opens=java.base/java.lang=ALL-UNNAMED</option>
+                        <option>--add-opens=java.base/java.io=ALL-UNNAMED</option>
                     </options>
                 </configuration>
             </plugin>
